syntax = "proto3";

package people.public;

import "proto/people/person.proto";
import "proto/common/common.proto";

option go_package = "github.com/shubamakabra/MagnusBox/golang/people";

service Person {
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
  rpc GetNumber(GetNumberRequest) returns (GetNumberResponse);
  rpc AddPerson(AddPersonRequest) returns (AddPersonResponse);
  rpc GetPersonFromNumber(GetPersonFromNumberRequest) returns (GetPersonFromNumberResponse);
}

message GetPersonRequest{
  string id = 1;
}

message GetPersonResponse{
  oneof result{
    people.Person person = 1;
    common.Error error = 2;
  }
}

message GetPersonFromNumberRequest {
  int32 number = 1;
}

message GetPersonFromNumberResponse {
  oneof result {
    people.Person.PhoneNumber number = 1;
    common.Error error = 2;
  }
}


message GetNumberRequest{
  string id = 1;
}

message GetNumberResponse{
  oneof result {
    people.Person.PhoneNumber number = 1;
    common.Error error = 2;
  }
}

message AddPersonRequest{
  string id = 1;
  string number = 2;
}

message AddPersonResponse{
  oneof result {
    bool ok = 1;
    common.Error error = 2;
  }
}